# eigs

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rust-analyzer.toml
.github/workflows/: build.yml  main.yml  release.yml
eigs-py/: Cargo.toml  Makefile  README.md  pyproject.toml
eigs-py/eigs/: __init__.py  eigs.py
eigs-py/examples/: example0.py
eigs-py/pysrc/eigs/: eigs.py
eigs-py/src/: read.rs
eigs-pyo3/: Cargo.toml  README.md
eigs-pyo3/src/: lib.rs
eigs-rs/: Cargo.toml
eigs-rs/examples/: example1.rs
eigs-rs/src/: eigs.rs
examples/: example1.rs
python/: Cargo.toml  Dockerfile  README.md  pyproject.toml
python/docker/: manylinux2014_x86_64.Dockerfile
python/eigs/: __init__.py
python/examples/: example0.py  example1.py
python/src/: lib.rs
rust/: Cargo.toml  README.md
rust/examples/: example1.rs  example2.rs
rust/src/: csc.rs  eigs.rs  split.rs
src/: csc.rs  lib.rs
