[package]
name = "eigs-rs"
version = "0.0.1"
edition = "2021"
authors = ["Floris Laporte <floris.laporte@gmail.com>"]
readme = "README.md"
license = " LGPL-2.1-only"
description = "Find Eigenvalues and Eigenvectors using UMFPACK + ARPACK"
documentation = "https://github.com/flaport/eigs-rs"
homepage = "https://github.com/flaport/eigs-rs"
repository = "https://github.com/flaport/eigs-rs"

[lib]
name = "eigs"
crate-type = ["lib", "cdylib"]

[dependencies]
arpack-ng-sys = {version="0.2.1", features=["static"]}
umfpack-rs = "0.0.1"
itertools = "0.11.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
num-complex = "0.4.4"
num-traits = "0.2.16"
once_cell = "1.18.0"
rayon = "1.7.0"
sprs = "0.11.1"
