[build-system]
requires = ["setuptools", "pip", "build", "wheel", "bump2version", "maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "eigs"
version = "0.0.2"
authors = [
{ name = "Floris Laporte", email = "floris.laporte@gmail.com" },
]
description = "An efficient complex eigensolver written in Rust."
requires-python = ">=3.9"
keywords = [
  "eigenvalues",
  "eigenvectors",
  "eigenmodes",
  "eigs",
]
license = { text = "LGPL-2.1-only" }
readme = "README.md"
classifiers = [
  #"Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "scipy",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pyright]
reportPrivateImportUsage = false

[tool.cibuildwheel]
build = ["*-manylinux_x86_64", "*-win_amd64"] #, "*-macosx_x86_64"]
manylinux-x86_64-image = "flaport/manylinux2014_x86_64"

[tool.cibuildwheel.linux]
before-build = []
environment = {PATH="$HOME/.cargo/bin:$PATH"}

[tool.cibuildwheel.windows]
before-build = []

[tool.cibuildwheel.macos]
before-build = []
