[package]
name = "eigs"
version = "0.0.3"
edition = "2021"
authors = ["Floris Laporte <floris.laporte@gmail.com>"]
readme = "README.md"
license = " LGPL-2.1-only"
description = "Find Eigenvalues and Eigenvectors with Rust using UMFPACK + ARPACK"
documentation = "https://github.com/flaport/eigs"
homepage = "https://github.com/flaport/eigs"
repository = "https://github.com/flaport/eigs"

[lib]
name = "eigs"
crate-type = ["lib", "cdylib"]

[features]
default=["umfpack-rs"]

[dependencies]
umfpack-rs = {version="0.0.1", optional=true}
csparse21 = {version="0.2.3", optional=true}
arpack-ng-sys = {version="0.2.1", features=["static"]}
num-complex = "0.4.4"
